--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.14.0",
@@ -39,6 +40,7 @@
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "uuidv4": "^6.2.13",
     "yup": "^1.3.3"
   },
   "devDependencies": {
