--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,3 +20,4 @@ buildscript {
         classpath("com.google.gms:google-services:4.4.0")
     }
 }
+    apply plugin: 'com.google.gms.google-services'
