--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.0",
+    "react-native-contacts": "^7.0.8",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-pager-view": "^6.2.3",
