--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.72.0",
     "react-native-contacts": "^7.0.8",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.1",
