--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android-dev": "react-native run-android --variant=developmentDebug --appId com.awesomeproject.development",
+    "android-prod": "react-native run-android --variant=productionDebug  --appId com.awesomeproject.production",
+    "android-stag": "react-native run-android --variant=stagingDebug --appId com.awesomeproject.staging"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.2.1",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -26,15 +31,24 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.0",
+    "react-native-config": "^1.5.1",
     "react-native-contacts": "^7.0.8",
+    "react-native-date-picker": "^4.3.5",
+    "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-gifted-charts": "^1.4.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.1",
+    "react-native-pie-chart": "^3.0.2",
+    "react-native-progress": "^5.0.1",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.0",
