--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 
-project.ext.envConfigFiles = [
-    production: ".env.production",
-    development: ".env.development",
-    staging: ".env.staging"
-]
+// project.ext.envConfigFiles = [
+//     production: ".env.production",
+//     development: ".env.development",
+//     staging: ".env.staging"
+// ]
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -80,26 +80,26 @@ android {
 
     flavorDimensions "default"
  
-         productFlavors {
-             production { 
-                minSdkVersion rootProject.ext.minSdkVersion
-                applicationId "com.awesomeproject.production" 
-                targetSdkVersion rootProject.ext.targetSdkVersion 
-                resValue "string", "build_config_package", "com.awesomeproject"
-            }
-             development { 
-                minSdkVersion rootProject.ext.minSdkVersion
-                applicationId "com.awesomeproject.development" 
-                targetSdkVersion rootProject.ext.targetSdkVersion 
-                resValue "string", "build_config_package", "com.awesomeproject"
-            } 
-             staging { 
-                minSdkVersion rootProject.ext.minSdkVersion
-                applicationId "com.awesomeproject.staging" 
-                targetSdkVersion rootProject.ext.targetSdkVersion 
-                resValue "string", "build_config_package", "com.awesomeproject"
-            }                  
-        }
+        //  productFlavors {
+        //      production { 
+        //         minSdkVersion rootProject.ext.minSdkVersion
+        //         applicationId "com.awesomeproject.production" 
+        //         targetSdkVersion rootProject.ext.targetSdkVersion 
+        //         resValue "string", "build_config_package", "com.awesomeproject"
+        //     }
+        //      development { 
+        //         minSdkVersion rootProject.ext.minSdkVersion
+        //         applicationId "com.awesomeproject.development" 
+        //         targetSdkVersion rootProject.ext.targetSdkVersion 
+        //         resValue "string", "build_config_package", "com.awesomeproject"
+        //     } 
+        //      staging { 
+        //         minSdkVersion rootProject.ext.minSdkVersion
+        //         applicationId "com.awesomeproject.staging" 
+        //         targetSdkVersion rootProject.ext.targetSdkVersion 
+        //         resValue "string", "build_config_package", "com.awesomeproject"
+        //     }                  
+        // }
 
     namespace "com.awesomeproject"
     defaultConfig {
