--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.2.1",
-    "@react-native-firebase/app": "^18.7.3",
-    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/auth": "^18.8.0",
+    "@react-native-firebase/firestore": "^18.8.0",
+    "@react-native-firebase/messaging": "^18.8.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -37,6 +40,7 @@
     "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-charts": "^1.4.2",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-pager-view": "^6.2.3",
@@ -50,6 +54,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.0",
     "react-navigation": "^5.0.0",
