--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,3 +5,6 @@ includeBuild('../node_modules/@react-native/gradle-plugin')
 
 include ':react-native-contacts'
 project(':react-native-contacts').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-contacts/android')
+
+include ':react-native-localization', ':app'
+project(':react-native-localization').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-localization/android')
