--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "i18n-js": "^4.3.2",
+    "lodash.memoize": "^4.1.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.0",
@@ -43,6 +45,7 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-view": "^0.0.14",
+    "react-native-localization": "^2.3.2",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.1",
     "react-native-pie-chart": "^3.0.2",
@@ -71,6 +74,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.6",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/lodash.memoize": "^4.1.9",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
     "@types/react-navigation": "^3.4.0",
