--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native-contacts": "^7.0.8",
     "react-native-date-picker": "^4.3.5",
     "react-native-date-ranges": "^2.5.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-gifted-charts": "^1.4.2",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.0",
@@ -51,6 +51,7 @@
     "react-native-pie-chart": "^3.0.2",
     "react-native-progress": "^5.0.1",
     "react-native-progress-steps": "^1.3.4",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-select-dropdown": "^3.4.0",
