--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "android-stag": "react-native run-android --variant=stagingDebug --appId com.awesomeproject.staging"
   },
   "dependencies": {
+    "@epubjs-react-native/core": "^1.1.0",
+    "@epubjs-react-native/file-system": "^1.0.0",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
@@ -40,6 +42,7 @@
     "react-native-contacts": "^7.0.8",
     "react-native-date-picker": "^4.3.5",
     "react-native-date-ranges": "^2.5.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-gifted-charts": "^1.4.2",
     "react-native-gifted-chat": "^2.4.0",
@@ -61,6 +64,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.0",
+    "react-native-webview": "^13.7.0",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
