--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "android-stag": "react-native run-android --variant=stagingDebug --appId com.awesomeproject.staging"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.4",
     "@epubjs-react-native/core": "^1.1.0",
     "@epubjs-react-native/file-system": "^1.0.0",
     "@gorhom/bottom-sheet": "^4.6.0",
@@ -33,6 +34,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "graphql": "^15.8.0",
     "i18n-js": "^4.3.2",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.30.1",
